Added google analytics.

--- a/website/layout/base.j2
+++ b/website/layout/base.j2
@@ -105,6 +105,10 @@
     <script defer="defer" src="{{ media_url('js/carousel.js') }}"></script>
   {% endblock scripts %}
 
+  {% block analytics %}
+  {% include "analytics.j2" %}
+  {% endblock analytics %}
+
   {% endblock js %}
 </body>
 </html>
